fix: fix media query in page.css and remove extra spaces

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,7 +5,7 @@
   padding: 45px 15.65% 60px 15.65%;
 }
 
-@media screen and (max-witdh: 425px) {
+@media screen and (max-width: 425px) {
   .page {
     margin: 28px auto 36px auto;
   }  
